// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`template helpers filterTemplatesBySubaccount should return published templates for a specific subaccount 1`] = `
Array [
  Object {
    "has_published": false,
    "name": "unpublished",
    "shared_with_subaccounts": false,
    "subaccount_id": 101,
  },
  Object {
    "has_published": true,
    "name": "publishedSubaccount",
    "shared_with_subaccounts": false,
    "subaccount_id": 101,
  },
  Object {
    "has_published": true,
    "name": "publishedShared",
    "shared_with_subaccounts": true,
    "subaccount_id": 0,
  },
]
`;

exports[`template helpers filterTemplatesBySubaccount should return published templates for master account 1`] = `
Array [
  Object {
    "has_published": true,
    "name": "publishedMaster",
    "shared_with_subaccounts": false,
    "subaccount_id": 0,
  },
  Object {
    "has_published": true,
    "name": "publishedShared",
    "shared_with_subaccounts": true,
    "subaccount_id": 0,
  },
]
`;

exports[`template helpers filterTemplatesBySubaccount should return published templates if no subaccounts exist 1`] = `
Array [
  Object {
    "has_published": false,
    "name": "unpublished",
    "shared_with_subaccounts": false,
    "subaccount_id": 101,
  },
  Object {
    "has_published": true,
    "name": "publishedSubaccount",
    "shared_with_subaccounts": false,
    "subaccount_id": 101,
  },
  Object {
    "has_published": true,
    "name": "publishedMaster",
    "shared_with_subaccounts": false,
    "subaccount_id": 0,
  },
  Object {
    "has_published": true,
    "name": "publishedShared",
    "shared_with_subaccounts": true,
    "subaccount_id": 0,
  },
]
`;

exports[`template helpers normalizeTemplateFromAddress does not change obj formatted from 1`] = `
Object {
  "content": Object {
    "from": Object {
      "email": "sender@domain.com",
      "name": "sender name",
    },
    "html": "<h1>html values</h1>",
  },
  "id": "test-template",
  "name": "Test Template",
  "published": false,
}
`;

exports[`template helpers normalizeTemplateFromAddress reformats string from to obj format 1`] = `
Object {
  "content": Object {
    "from": Object {
      "email": "sender@domain.com",
      "name": null,
    },
    "html": "<h1>html values</h1>",
  },
  "id": "test-template",
  "name": "Test Template",
  "published": false,
}
`;

exports[`template helpers resolveTemplateStatus resolves a draft only template 1`] = `
Object {
  "draft": true,
  "published": false,
  "publishedWithChanges": false,
}
`;

exports[`template helpers resolveTemplateStatus resolves a published only template 1`] = `
Object {
  "draft": false,
  "published": true,
  "publishedWithChanges": false,
}
`;

exports[`template helpers resolveTemplateStatus resolves a published with unpublished changes template 1`] = `
Object {
  "draft": false,
  "published": false,
  "publishedWithChanges": true,
}
`;
